# netshare-host-script

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.forgejo/workflows/: build-release.yaml
src/: audio_gui.rs  audio_sink.rs  client.rs  device.rs  device_windows.rs  host.rs  main.rs  parse.rs
