[package]
name = "fireshare-host-script"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tungstenite = "0.27.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
vigem-client = "0.1.4"